(JavaStreams) Exception Handling in java streams